# adventofcode

./: LICENSE  README.md  main.py  puz1.py  puz2.py  puz3.py  puz4.py  puz5.py  puz6.py
2022/day1/: puz1.py
2022/day2/: puz2.py
2022/day3/: puz3.py
2022/day4/: puz4.py
2022/day5/: puz5.py
2022/day8/: old_puz8.py  puz8.py
2022/tests/: conftest.py  day2_test.py  day3_test.py  day4_test.py  day5_test.py
advent2022/: main.py  pyproject.toml
advent2022/day5/: old_puz5.py
advent2022/day7/: puz7.py
advent2022/tests/: day1_test.py  day8_test.py
advent2023/: README.md  day1.py  day2.py  day3.py  puz1.py
advent2023/tests/: conftest.py  day1_test.py  day2_test.py  day3_test.py  input_test_day1_2.txt
advent2024/: README.md  day1.py
advent2024/tests/: conftest.py  day1_test.py
advent2025/: README.md  __init__.py  main.py  pyproject.toml
advent2025/day1/: __init__.py  puz1.py
advent2025/tests/: test_day1.py
day1/: puz1.py
day2/: puz2.py
day6/: puz6.py
day7/: puz7.py
day8/: puz8.py
tests/: conftest.py  day1_test.py  day2_test.py
