[project]
name = "advent_of_code_2022_jcacioppo"
version = "0.0.1"
authors = [
  { name="James Cacioppo", email="james.m.cacioppo@gmail.com" },
]
description = "Exploring python with Advent of Code 2022"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/JamesCacioppo/advent2022"